<?xml version="1.0"?>
<package format="3">
  <name>kuka_r900_kinematics</name>
  <version>0.1.0</version>
  <description>Inverse Kinematics using KDL for KUKA KR6 R900</description>

  <maintainer email="hk@example.com">hk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
